# taskflow

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/taskflow/: __init__.py  __main__.py  cli.py  config.py  core.py  models.py  storage.py
tests/: conftest.py  test_cli.py  test_core.py  test_models.py
