[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "taskflow"
version = "0.1.0"
description = "A modern Python task management app — organize, prioritize, and track your tasks with ease."
authors = ["zhub9006 <zhub9006@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "taskflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.0"}
rich = "^13.0"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
mypy = "^1.10"
ruff = "^0.5.0"
bandit = "^1.7"
pre-commit = "^3.7"

[tool.poetry.scripts]
taskflow = "taskflow.cli:app"

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

# ── mypy ─────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# ── pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# ── bandit ───────────────────────────────────────────────────────────
[tool.bandit]
targets = ["src/taskflow"]
skips = ["B101"]  # assert_used
